# pygst

./: README.md
clang/tuto01/: CMakeLists.txt  tuto01.c
clang/tuto02/: CMakeLists.txt  tuto02.c
clang/tuto03/: CMakeLists.txt  tuto03.c
clang/usbcam/: CMakeLists.txt  usbcam.c
clang/usbcam02/: CMakeLists.txt  usbcam02.c
py/: hello.py  usbcam.py  usbcam_multi_save.py  usbcam_save.py
